..F....... [ZBXNEXT-4374] implemented the widget configuration fields clearing when changing the type (ashubin)
A.F.I...S. [ZBXNEXT-4119] implemented tag based permissions (miks, Oleg, Sasha, Sergejs)
..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
..F....... [ZBXNEXT-4340] added kiosk mode for dashboard (ashubin)

Bug fixes:
..F....... [ZBX-13573] fixed undefined index message changing Action "Acknowledgment operations" from "Remote command" to "Notify all involved" (agriscenko)
..F....... [ZBX-13570] fixed undefined index in API call (agriscenko)
A......... [ZBX-13331] removed "recovery" property from action.get API method response (nikita)
..F....... [ZBX-13309] fixed displaying of Problem/Recovery time (agriscenko, ashubin, Sasha)
.......PS. [ZBX-13450] fixed server and proxy compilation problem for Solaris 10 (MVekslers)
A.F....... [ZBX-13458,ZBX-13494] fixed resolving of the macros in map labels for non-superadmin users (Sasha)
..F....... [ZBX-13526] fixed widget placeholder jumping instead of resizing while dashboard edit (ashubin)
.......PS. [ZBX-13362] fixed potentially wrong rows deleting by housekeeper in PostgreSQL (Sergejs)
..F....... [ZBX-13506] fixed linked trigger is moved to sibling map element (agriscenko)
........S. [ZBX-13586] fixed trigger-based event correlation - suspend creation of event if no problems are recovered by it (viktors, wiper)
........S. [ZBX-13339] improved deallocation of memory (MVekslers)
..F....... [ZBX-13412] fixed JS error and wrong form behaviour when changing item type, type of information (agriscenko)
..F....... [ZBX-13471] fixed contrast in selected item filters (Andzs)
..F....... [ZBX-13428] fixed long name of map outside go back button in map widget (agriscenko, Sasha)
..F....... [ZBX-13340] fixed pie graphs displaying incorrect data (Ivo)
..F....... [ZBX-13257] fixed display of the latest item in Audit log (agriscenko)