@@ -584,11 +584,17 @@ abstract class CItemGeneral extends CApiService {
 			$hostids = array_keys(array_flip($hostids));
 			$all_hostids = array_merge($hostids, [$template['templateid']]);
 
-			$host_items = $this->get([
+			$options = [
 				'output' => ['itemid', 'type', 'key_', 'master_itemid', 'hostid'],
-				'filter' => ['hostid' => $all_hostids],
+				'hostids' => $all_hostids,
 				'preservekeys' => true
-			]);
+			];
+
+			if ($this instanceof CItem) {
+				$options['webitems'] = true;
+			}
+
+			$host_items = $this->get($options);
 
 			foreach ($items as $item) {
 				if ($update) {
@@ -1410,8 +1416,8 @@ abstract class CItemGeneral extends CApiService {
 	/**
 	 * Validate items with type ITEM_TYPE_DEPENDENT for create or update operation.
 	 *
-	 * @param array                 $items          Array of items.
-	 * @param CItem|CItemPrototype  $data_provider  Item data provider.
+	 * @param array                $items          Array of items.
+	 * @param CItem|CItemPrototype $data_provider  Item data provider.
 	 *
 	 * @throws APIException for invalid data.
 	 */
@@ -1441,10 +1447,16 @@ abstract class CItemGeneral extends CApiService {
 
 		do {
 			if ($has_unresolved_masters) {
-				$db_masters = $data_provider->get([
+				$options = [
 					'output' => ['type', 'name', 'hostid', 'master_itemid'],
 					'itemids' => array_keys($unresolved_master_itemids)
-				]);
+				];
+
+				if ($data_provider instanceof CItem) {
+					$options['webitems'] = true;
+				}
+
+				$db_masters = $data_provider->get($options);
 
 				foreach ($db_masters as $db_master) {
 					$items_cache[$db_master['itemid']] = $db_master;
@@ -1536,7 +1548,6 @@ abstract class CItemGeneral extends CApiService {
 							$item['master_itemid'] != $db_items[$item['itemid']]['master_itemid']) {
 						$itemid = $item['itemid'];
 						$old_master_itemid = $db_items[$itemid]['master_itemid'];
-						$dependency_level;
 
 						if (!array_key_exists($master_itemid, $items_added)) {
 							$items_added[$master_itemid] = [$dependency_level => []];
