@@ -123,7 +123,8 @@ if (!$readonly) {
 				'dstfld1' => 'master_itemid',
 				'dstfld2' => 'master_itemname',
 				'only_hostid' => $data['hostid'],
-				'excludeids' => [$data['itemid']]
+				'excludeids' => [$data['itemid']],
+				'with_webitems' => 1
 			]).', null, this);'
 		);
 }
